# DP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
About/: notes.txt
CPPObjectModel/Class/: C++实现.docx  DPClass.cpp
CPPObjectModel/VirtualFunction/: C++实现.md  C++实现.txt  DPVirtualFunction.cpp
Creational/: 第三章 创建性模式.txt
Creational/AbstractFactory/: 3.1 抽象工厂 - 对象创建型模式.txt  AbstractFactory.h  AbstractProductA.h  AbstractProductB.h  ConcreteFactoryA.cpp  ConcreteFactoryA.h  ConcreteFactoryB.cpp  ConcreteFactoryB.h  DPAbstractFactory.cpp
Creational/Builder/: 3.2 建造者 - 对象创建型模式.txt  Builder.h  ConcreteBuilderA.cpp  ConcreteBuilderA.h  ConcreteBuilderB.cpp  ConcreteBuilderB.h  DPBuilder.cpp  Director.cpp  Director.h  Product.cpp  Product.h
Creational/FactoryMethod/: 3.3 工厂方法 - 对象创建型模式.txt  ConcreteCreator.cpp  ConcreteCreator.h  ConcreteProduct.cpp  ConcreteProduct.h  Creator.cpp  Creator.h  DPFactoryMethod.cpp  Product.cpp  Product.h
Creational/Prototype/: 3.4 原型 - 对象创建型模式.txt  ConcretePrototypeA.cpp  ConcretePrototypeA.h  ConcretePrototypeB.cpp  ConcretePrototypeB.h  DPPrototype.cpp  Prototype.h  PrototypeManager.cpp  PrototypeManager.h
Creational/Singleton/: 3.5 单例 - 对象创建型模式.txt  DPSingleton.cpp  Singleton.cpp  Singleton.h
Others/producerconsumer/: DPProducerConsumer.cpp
Public/: DPAbstractFactory.h  DPAdapter.h  DPBridge.h  DPBuilder.h  DPClass.h  DPFactoryMethod.h  DPProducerConsumer.h  DPPrototype.h  DPSingleton.h  DPVirtualFunction.h  DesignPatterns.h
Structural/: 第四章 结构型模式.txt
Structural/Adapter/: 4.1 适配器 - 类对象结构型模式.txt  Adaptee.cpp  Adaptee.h  Adapter.cpp  Adapter.h  DPAdapter.cpp  Target.h
Structural/Bridge/: 4.2 Bridge 桥接 - 对象结构型模式.txt  Abstraction.cpp  Abstraction.h  DPBridge.cpp
